# OhmegaDrivers

./: App.xaml  App.xaml.cpp  CMakeList.txt  CMakeLists.txt  Enumerate-Monitors  MainWindow.xaml.cpp  Per‑monitor HDC  changewindowstogamma.py  create-transform  gamma.cpp  gamma.h  gamma2.cpp  pipeline  pixelshadersketch  projectstructure  readme.md  restorewindowscolor.py
Per Monitor Multi Lut/GammaMultiMonitor/: CMakeLists.txt  folder layout  main.cpp  readme.md
Windows-WCS-ICS/GammaWCS/: CMakeList.txt  folder layout  main.cpp
direct3d12/: readme.md
direct3d12/GammaD3D12/: CMakeLists.txt  Folder layout  main.cpp
python/: disablewatchdog.py  disablewatchdogfixv11  exekillswitch.py  gammalogger.py  ohmega.py  permonitodisable.py  pystray.py  readme.md  readme2.md  restorewindowscolor.py  watchdog.py
windowsgammaset/: readme.md
